--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI
 on:
   push:
     branches:
-      - '**'
+      - "**"
   pull_request:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   lint:
@@ -58,12 +58,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/login-action@v1
-        with:
-          registry: registry.gitlab.com
-          username: ${{ secrets.GITLAB_USER }}
-          password: ${{ secrets.GITLAB_TOKEN }}
+      # - uses: docker/login-action@v1
+      #   with:
+      #     registry: registry.gitlab.com
+      #     username: ${{ secrets.GITLAB_USER }}
+      #     password: ${{ secrets.GITLAB_TOKEN }}
       - run: ./scripts/release || exit 0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
