--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,10 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      # - uses: docker/login-action@v1
-      #   with:
-      #     registry: registry.gitlab.com
-      #     username: ${{ secrets.GITLAB_USER }}
-      #     password: ${{ secrets.GITLAB_TOKEN }}
-      - run: ./scripts/release || exit 0
+      - uses: go-semantic-release/action@v1
+        with:
+          bin: ./semantic-release
+          hooks: goreleaser
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
